routing pages added

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2602,3 +2602,17 @@ h3,
 .footer-area .footer-bottom .footer-social a span {
     font-size: 14px;
 }
+
+/*Contact Us CSS*/
+#contact .hero-banner::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url('https://images.unsplash.com/photo-1467241850596-6a0de48568da?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1600&q=80') left center no-repeat;
+    background-size: cover;
+    z-index: -1;
+}
