--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2616,3 +2616,71 @@ h3,
     background-size: cover;
     z-index: -1;
 }
+
+/*Coming Soon*/
+#coming-soon {
+    background: url("../images/banner/bg.jpg") top center no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+#coming-soon::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: rgba(49, 71, 89, 0.6);
+}
+
+@media (min-width: 1024px) {
+    #coming-soon {
+        background-attachment: fixed;
+    }
+}
+
+#main {
+    position: relative;
+}
+
+#header {
+    position: relative;
+    width: 100%;
+    padding: 100px 0;
+}
+
+#header h1 {
+    margin: 0 0 10px 0;
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 56px;
+    color: #fff;
+}
+
+#header h2 {
+    color: #eee;
+    margin-bottom: 40px;
+    font-size: 22px;
+}
+
+.accordion {
+    margin-top: 40px;
+}
+.accordion .card {
+    border: none;
+    margin-bottom: 20px;
+}
+.accordion .card h2 {
+    background: url(https://cdn0.iconfinder.com/data/icons/entypo/91/arrow56-512.png) no-repeat calc(100% - 10px) center;
+    background-size: 20px;
+    cursor: pointer;
+    font-size: 18px;
+}
+.accordion .card h2.collapsed {
+    background-image: url(https://cdn0.iconfinder.com/data/icons/arrows-android-l-lollipop-icon-pack/24/expand2-256.png);
+}
+.accordion .card-body {
+    padding-left: 0;
+    padding-right: 0;
+}
