--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -327,6 +327,7 @@
     top: 0;
     padding: 0;
     height: 100%;
+    z-index: 1001;
   }
   .mobile-nav.mean-container a.meanmenu-reveal {
     width: 25px;
