--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2520,6 +2520,9 @@ select.form-control {
   font-size: 20px;
   color: #7684ea;
 }
+.about-content.sign-table tr td{
+  padding: 10px;
+}
 
 .service-card {
   height: 100%;
@@ -6357,4 +6360,59 @@ select.form-control {
   margin: 0;
   font-size: 28px;
   color: #ffffff;
+}
+
+
+/*Table CSS*/
+.responsive-table li {
+  border-radius: 3px;
+  padding: 5px 30px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5px;
+}
+.responsive-table .table-header {
+  background-color: #95A5A6;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 0.03em;
+}
+.responsive-table .table-row {
+  background-color: #ffffff;
+  box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.1);
+}
+.responsive-table .col-1 {
+  flex-basis: 10%;
+  padding: 0;
+}
+.responsive-table .col-2 {
+  flex-basis: 40%;
+}
+.responsive-table .col-3 {
+  flex-basis: 25%;
+}
+.responsive-table .col-4 {
+  flex-basis: 25%;
+}
+@media all and (max-width: 767px) {
+  .responsive-table .table-header {
+    display: none;
+  }
+  .responsive-table li {
+    display: block;
+  }
+  .responsive-table .col {
+    flex-basis: 100%;
+  }
+  .responsive-table .col {
+    display: flex;
+    padding: 10px 0;
+  }
+  .responsive-table .col:before {
+    color: #6C7A89;
+    padding-right: 10px;
+    content: attr(data-label);
+    flex-basis: 50%;
+    text-align: right;
+  }
 }
