UI Screens added for Login, registration, verify-otp, reset-password, project page, navbar profile icon, confirmation modal and detection modal after login

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -421,8 +421,16 @@ button:focus, button:active {
   background-color: #0f0886 !important;
 }
 
-.color-maincolor {
+.brand-color {
   color: #7684ea !important;
+}
+.brand-link {
+  color: #7684ea !important;
+  font-weight: bold;
+}
+.brand-link:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .color-white {
@@ -1437,6 +1445,20 @@ select.form-control {
   text-transform: none;
   font-family: "Poppins", sans-serif;
   font-weight: 500;
+}
+.main-nav nav .navbar-nav .nav-item.login-btn {
+  background: #7684ea;
+  padding: 0 .7rem;
+  border-radius: .2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.main-nav nav .navbar-nav .nav-item.login-btn a {
+  color: #ffffff !important;
+}
+.main-nav nav .navbar-nav .nav-item.login-btn a:hover {
+  cursor: pointer;
 }
 
 .main-nav nav .navbar-nav .nav-item a.dropdown-toggle:after {
@@ -6445,4 +6467,143 @@ select.form-control {
   .career-table tbody tr td:nth-child(3):before {
     content: "Number of H1B workers";
   }
+}
+
+
+/*Sign in and Sign up CSS*/
+.form-signin{
+  background: white;
+  padding: 50px 80px;
+  /*min-height: 620px;*/
+}
+.form-signin .one-line{
+  display: flex;
+}
+
+.form-signin .forgot{
+  margin-left: auto;
+}
+
+@media only screen and (max-width: 576px) {
+  .form-signin {
+    min-width: 360px;
+    flex-wrap: wrap;
+    /*padding: 50px 0;*/
+  }
+}
+
+
+/*Font Size*/
+.f-10{
+  font-size: 10px;
+}
+.f-11{
+  font-size: 11px;
+}
+.f-12{
+  font-size: 12px;
+}
+.f-13{
+  font-size: 13px;
+}
+.f-14{
+  font-size: 14px;
+}
+.f-15{
+  font-size: 15px;
+}
+.f-16{
+  font-size: 16px;
+}
+.f-17{
+  font-size: 17px;
+}
+.f-18{
+  font-size: 18px;
+}
+.f-19{
+  font-size: 19px;
+}
+.f-20{
+  font-size: 20px;
+}
+.f-21{
+  font-size: 21px;
+}
+.f-22{
+  font-size: 22px;
+}
+.f-23{
+  font-size: 23px;
+}
+.f-24{
+  font-size: 24px;
+}
+.f-25{
+  font-size: 25px;
+}
+
+
+/*Mouse Events*/
+.hover-default{
+  cursor: default;
+}
+.hover-cursor{
+  cursor: pointer;
+}
+.hover-none{
+  cursor: none;
+}
+
+/*Input Field CSS*/
+.otp-input input{
+  width: 25% !important;
+  display: block;
+  height: calc(1.5em + 0.75rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+.otp-input input:last-child{
+  margin-right: 0 !important;
+}
+
+
+/*Navbar Profile ICON*/
+.user-profile-icon #dropdown-basic{
+  background-color: #7684ea;
+  border-radius: 50%;
+  border: 3px solid #ffffff;
+  box-shadow: 0 .125rem .25rem rgba(0,0,0,.075);
+  padding: .3rem 1rem;
+  font-size: 1.5rem;
+}
+.user-profile-icon #dropdown-basic:after{
+  display: none;
+}
+
+
+/*Alert UI*/
+.alert-block{
+  margin-top: 2rem;
+  position: fixed;
+  z-index: 1111;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.alert-block .toast{
+  color: #ffffff;
+  background-color: #7684ea;
+  border-color: #7684ea;
+  box-shadow: 0 .125rem .25rem rgba(0,0,0,.075);
+  z-index: 1111;
 }
