--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,8 +2,9 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Urbanist:wght@100;200;300;400;500;600;700;800;900&display=swap');
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Urbanist", sans-serif !important;
   background-color: #fff;
   font-size: 16px;
   color: #767676;
@@ -1289,7 +1290,7 @@ select.form-control {
 
 .sidebar-info-content h3 {
   font-size: 24px;
-  font-family: "Roboto", sans-serif;
+  font-family: "Urbanist", sans-serif;
   color: #000;
   margin-bottom: 20px;
 }
@@ -1431,8 +1432,8 @@ select.form-control {
 .main-nav nav .navbar-nav .nav-item {
   -webkit-transition: all 0.3s linear;
   transition: all 0.3s linear;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 15px;
+  /*padding-bottom: 10px;*/
 }
 
 .main-nav nav .navbar-nav .nav-item a {
