--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,8 +2,9 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Urbanist:wght@100;200;300;400;500;600;700;800;900&display=swap');
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Urbanist", sans-serif !important;
   background-color: #fff;
   font-size: 16px;
   color: #767676;
